--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
           'params': {}
         };
       </script>
-      <script type="text/javascript" src="//www.highperformanceformat.com/b53794ba87eec11a82cae794d10578d5/invoke.js"></script>
+      <script data-cfasync="false" type="text/javascript" src="//www.highperformanceformat.com/b53794ba87eec11a82cae794d10578d5/invoke.js"></script>
     </div>
 
     <!-- Main Content with Top and Bottom Ads -->
@@ -149,7 +149,7 @@
             'params': {}
           };
         </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8881da2e139c03bae810f89c31ea34c4/invoke.js"></script>
+        <script data-cfasync="false" type="text/javascript" src="//www.highperformanceformat.com/8881da2e139c03bae810f89c31ea34c4/invoke.js"></script>
       </div>
 
       <!-- Main Website Container -->
@@ -189,7 +189,7 @@
             'params': {}
           };
         </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/8e9cb65ec7af863fc57bb40d6a596076/invoke.js"></script>
+        <script data-cfasync="false" type="text/javascript" src="//www.highperformanceformat.com/8e9cb65ec7af863fc57bb40d6a596076/invoke.js"></script>
       </div>
     </div>
 
@@ -204,7 +204,7 @@
           'params': {}
         };
       </script>
-      <script type="text/javascript" src="//www.highperformanceformat.com/b53794ba87eec11a82cae794d10578d5/invoke.js"></script>
+      <script data-cfasync="false" type="text/javascript" src="//www.highperformanceformat.com/b53794ba87eec11a82cae794d10578d5/invoke.js"></script>
     </div>
   </div>
 </body>
